--- a/Map/pages/userpage/collections/collections.wxss
+++ b/Map/pages/userpage/collections/collections.wxss
@@ -1,6 +1,7 @@
 /* pages/userpage/collections/collections.wxss */
 .post-container{
   /* height: 100%; */
+  height: unset;
   width: 100%;
   overflow-x:hidden;
   /* background: #F0F4F3; */
@@ -8,7 +9,7 @@
 
 .feed-item{
   width: 95%;
-  height: 340rpx;
+  /* height: 340rpx; */
   border-radius: 10rpx;
   padding: 15rpx 30rpx;
   margin: 20rpx;
@@ -102,13 +103,12 @@
 }
 
 .feed-item .feed-content .banner .post-type{
-  width: 70rpx;
+  padding: 0 8rpx;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 42rpx;
   border-radius: 9rpx;
-  /* background: #ffc0cb; */
   background: #008cff;
   margin: 0 15rpx 0 0;
   opacity: 0.8;
@@ -122,7 +122,7 @@
 
 .feed-item .feed-content .content{
   padding: 10rpx 0 0 0;
-  height: 115rpx;
+  /* height: 115rpx; */
   width: 100%;
   word-break: break-all;
   display: block;
@@ -130,10 +130,15 @@
   color: #5b5b5b;
 }
 
+.feed-item .feed-content .empty{
+  height: 40rpx;
+  display: block;
+}
+
 .feed-item .feed-content .actions{
   display: inline-block;
   vertical-align: text-bottom;
-  margin: 15rpx 0 0 0; 
+  margin: 35rpx 0 0 0; 
   color: #00aaff;
   font-size: 26rpx;
 }
