--- a/Map/pages/userpage/collections/collections.wxss
+++ b/Map/pages/userpage/collections/collections.wxss
@@ -11,18 +11,23 @@
   width: 95%;
   /* height: 340rpx; */
   border-radius: 10rpx;
-  padding: 15rpx 30rpx;
   margin: 20rpx;
   background: #ffffff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
   box-shadow: 0 2px 5px #eeeeee;
 }
+
+.feed-item .ex-image{
+  padding: 0rpx 30rpx 10rpx 30rpx;
+  
+}
+
 .feed-item .feed-user{
   width: 650rpx;
   left: 0;
   height: 100rpx;
-  margin-bottom: 10rpx;
+  margin: 10rpx 0;
   display: flex;
   flex-direction: row;
 }
