--- a/Map/pages/userpage/posts/posts.wxml
+++ b/Map/pages/userpage/posts/posts.wxml
@@ -1,14 +1,33 @@
 <!--pages/userpage/posts/posts.wxml-->
-
 <scroll-view scroll-y="true" class="post-container">
 
-  <block wx:for="{{posts}}" wx:key="key" id="{{item._id}}">
+  <block wx:for="{{posts}}" wx:key="key">
     <view class="feed-item" hover-class="hover-common" id="{{item._id}}" bindtap="tapPost" bindlongtap="longtapPost" data-idx="{{index}}">
+
+      <!-- <view wx:if="{{item.image}}" class="solid-bottom bg-img" style="background-image:url({{item.image}}); height:160rpx; border-top-left-radius: 10rpx; border-top-right-radius: 10rpx;">
+      </view> -->
+
+      <view class="ex-image">
+      <view class="feed-user">
+        <view class="avatar">
+          <image wx:if="{{item.anonymous}}" src="/resources/nouser_akarin.jpg"></image>
+          <image wx:else src="{{item.avatarURL}}"></image>
+        </view>
+        <view class="source">
+            <view wx:if="{{item.anonymous}}" class="username" style="color:gray">匿名用户{{user_id==item.poster_id?'(自己)':''}}</view>
+            <view wx:else class="username">{{item.userName}}{{user_id==item.poster_id?'(自己)':''}}</view>
+            <view class="datetime">{{item.createTime}}</view>
+          </view>
+        <view class="more" catchtap="showOptions" data-idx="{{index}}">
+          <image src="/pages/userpage/res/more.png"></image>
+        </view>
+
+      </view>
+
       <view class="feed-content">
         <view class="banner">
 
           <!-- 根据帖子类型变化的post-type tag -->
-
           <view wx:if="{{item.type=='帖子'}}" class="post-type">
             <text>{{item.type}}</text>
           </view>
@@ -23,15 +42,9 @@
               <text>已解决</text>
             </view>
           </block>
-          <view wx:if="{{item.anonymous==true}}" class="post-type" style="background:gray">
-            <text>匿名</text>
-          </view>
 
           <view class="title">
             <text>{{item.title}}</text>
-          </view>
-          <view class="more" catchtap="showOptions" data-idx="{{index}}">
-            <image src="/pages/userpage/res/more.png"></image>
           </view>
         </view>
 
@@ -46,13 +59,17 @@
         <view wx:else class="empty"></view>
 
         <view class="actions">
-          <text>{{item.hot}}° · {{item.num_likes}} Likes · {{item.num_replies}} Replies · {{item.createTime}} </text>
+          <text>{{item.hot}}° · {{item.num_likes}} Likes · {{item.num_replies}} Replies</text>
         </view>
       </view>
+      </view>
+
     </view>
   </block>
 
 </scroll-view>
+
+<!-- Above part in collection.wxml and posts.wxml is exactly same! -->
 
 <view class="cu-modal {{showOptions==true?'show':''}}" bindtap="hideOptions">
   <view class="cu-dialog" catchtap>
@@ -89,7 +106,7 @@
 
 
 <block wx:if="{{num_posts==0}}">
-<view class="empty-hint">
-<text>还没有发过贴哦</text>
-</view>
+  <view class="empty-hint">
+    <text>还没有发过贴哦</text>
+  </view>
 </block>
