--- a/Map/pages/map/map.wxss
+++ b/Map/pages/map/map.wxss
@@ -231,3 +231,21 @@
   right: 0rpx;
   opacity: 0.6;
 }
+.heatmap {
+  width: 100rpx;
+  height: 100rpx;
+  background: rgba(255, 255, 255, 0);
+  border-radius: 50%;
+  box-shadow: 0 0 10rpx rgba(0,0,0,0.1);
+  position: absolute;
+  bottom: 30rpx;
+  right: 30rpx;
+}
+.heatmap .marker {
+  width: 100rpx;
+  height: 100rpx;
+  position: absolute;
+  bottom: 0rpx;
+  right: 0rpx;
+  opacity: 0.6;
+}
