列表添加图片预览支持

--- a/Map/pages/userpage/posts/posts.wxml
+++ b/Map/pages/userpage/posts/posts.wxml
@@ -4,8 +4,8 @@
   <block wx:for="{{posts}}" wx:key="key">
     <view class="feed-item" hover-class="hover-common" id="{{item._id}}" bindtap="tapPost" bindlongtap="longtapPost" data-idx="{{index}}">
 
-      <!-- <view wx:if="{{item.image}}" class="solid-bottom bg-img" style="background-image:url({{item.image}}); height:160rpx; border-top-left-radius: 10rpx; border-top-right-radius: 10rpx;">
-      </view> -->
+      <view wx:if="{{item.image}}" class="solid-bottom bg-img" style="background-image:url({{item.image}}); height:160rpx; border-top-left-radius: 10rpx; border-top-right-radius: 10rpx;">
+      </view>
 
       <view class="ex-image">
       <view class="feed-user">
