--- a/Map/pages/publish/help/help.wxml
+++ b/Map/pages/publish/help/help.wxml
@@ -1,4 +1,4 @@
-<view class="container">
+<!-- <view class="container">
 	<view class="container-body container-gray">
 			<view class="group-header">你的位置：{{position.latitude}},{{position.longitude}}</view>
 			<view class="group-body">
@@ -30,4 +30,35 @@
 			<button class="btn-block btn-orange" bindtap="bindButtonPublish">发表</button>
 		</view>
 	</view>
+</view> -->
+<form>
+	<view class="cu-form-group margin-top">
+		<text class="cuIcon-locationfill text-orange">{{position.latitude}}, {{position.longitude}}</text>
+	</view>
+	<view class="cu-form-group margin-top">
+		<view class="title">具体位置</view>
+		<input placeholder="准确的描述可以帮助别人更快找到你" bindinput="titleInput"></input>
+	</view>
+	<view class="cu-form-group">
+		<textarea placeholder="遇到什么问题了？" bindinput="contentInput"></textarea>
+	</view>
+	<view class="cu-bar bg-white margin-top">
+		<view class="action">图片上传</view>
+	</view>	
+	<view class="cu-form-group">
+		<view class="grid col-4 grid-square flex-sub">
+			<view class="bg-img" wx:if="{{imgPath !== ''}}" bindtap="viewImage" data-url="{{imgPath}}">
+				<image src='{{imgPath}}' mode='aspectFill'></image>
+				<view class="cu-tag bg-red" catchtap="deleteImg" data-index="{{index}}">
+					<text class="cuIcon-close"></text>
+				</view>
+			</view>
+			<view class="solids" bindtap="chooseImage" wx:if="{{imgPath === ''}}">
+				<text class="cuIcon-cameraadd"></text>
+			</view>
+		</view>
+	</view>
+</form>
+<view class="padding flex flex-direction">
+	<button class="cu-btn bg-green margin-tb-sm lg shadow" bindtap="bindButtonPublish">发表</button>
 </view>
