--- a/Map/pages/publish/meet/meet.wxml
+++ b/Map/pages/publish/meet/meet.wxml
@@ -1,52 +1,31 @@
-<view class="container">
-	<view class="container-body container-gray">
-			<view class="group-header">集合位置：{{position.latitude}},{{position.longitude}}</view>
-			<view class="group-body">
-				<view class="input-list">
-					<view class="input-item">
-						<text class="input-item-label">主题</text>
-						<view class="input-item-content">
-							<input type="text" auto-focus placeholder="想说点什么……？" bindinput="titleInput"></input>
-						</view>
-					</view>
-				</view>
-			</view>
-		<view class="group">
-			<view class="group-body">
-				<textarea placeholder="整点儿内容" bindinput="contentInput"></textarea>
-			</view>
-
-      <view class="group-header">集合时间</view>
-      <view class="group-body">
-        <view class="input-list">
-        
-          <view class="input-item">
-            <text class="input-item-label">日期</text>
-            <view class="input-item-content">
-              <picker mode="date" value="{{date}}" start="2020-03-19" end="2099-12-31" bindchange="bindDateChange">
-                <view class="picker">
-                  {{date?date:"点击安排日期"}}
-                </view>
-              </picker>
-            </view>
-          </view>
-          <view class="input-item">
-            <text class="input-item-label">时间</text>
-            <view class="input-item-content">
-              <picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="bindTimeChange">
-                <view class="picker">
-                  {{time?time:"点击安排时间"}}
-                </view>
-              </picker>
-            </view>
-          </view> 
-
-        </view>
-      </view>
-		</view>
-
-		<view class="btn-submit">
-			<button class="btn-block btn-orange" bindtap="bindButtonPublish">发表</button>
-		</view>
+<form>
+	<view class="cu-form-group margin-top">
+		<text class="cuIcon-locationfill text-orange">{{position.latitude}}, {{position.longitude}}</text>
 	</view>
+	<view class="cu-form-group margin-top">
+		<view class="title">主题</view>
+		<input placeholder="想说点什么……？" bindinput="titleInput"></input>
+	</view>
+	<view class="cu-form-group">
+		<textarea placeholder="整点儿内容" bindinput="contentInput"></textarea>
+	</view>
+	<view class="cu-form-group margin-top">
+		<view class="title">集合日期</view>
+		<picker mode="date" value="{{date}}" start="2020-03-19" end="2099-12-31" bindchange="bindDateChange">
+			<view class="picker">
+				{{date?date:"点击安排日期"}}
+			</view>
+		</picker>
+	</view>
+  <view class="cu-form-group">
+		<view class="title">集合时间</view>
+		<picker mode="time" value="{{time}}" start="00:00" end="23:59" bindchange="bindTimeChange">
+			<view class="picker">
+				{{time?time:"点击安排时间"}}
+			</view>
+		</picker>
+	</view>
+</form>
+<view class="padding flex flex-direction">
+	<button class="cu-btn bg-green margin-tb-sm lg shadow" bindtap="bindButtonPublish">发表</button>
 </view>
