--- a/Map/pages/userpage/collections/collections.wxml
+++ b/Map/pages/userpage/collections/collections.wxml
@@ -82,15 +82,31 @@
   <view class="cu-dialog" catchtap>
     <view class="cu-list menu text-left solid-top">
 
-      <view class="cu-item" catchtap="removeCollection">
+      <view wx:if="{{mode=='collections'&&isMe}}" class="cu-item" catchtap="removeCollection">
         <view class="content">
           <view class="option-item">
-
             <text>取消收藏</text>
           </view>
         </view>
       </view>
 
+
+      <view wx:if="{{mode=='posts'&&isMe}}" class="cu-item" hover-class="hover-common" catchtap="deletePost">
+        <view class="content">
+          <view class="option-item">
+            <text>删除帖子</text>
+          </view>
+        </view>
+      </view>
+
+      <view wx:if="{{mode=='posts'&&isMe&&selected_post.type=='求助'}}" class="cu-item" hover-class="hover-common" catchtap="revQuestState">
+        <view class="content">
+          <view class="option-item">
+            <text wx:if="{{selected_post.content.help}}">标记为未解决</text>
+            <text wx:else>标记为已解决</text>
+          </view>
+        </view>
+      </view>
 
       <view class="cu-item" catchtap="showPost">
         <view class="content">
@@ -100,7 +116,6 @@
           </view>
         </view>
       </view>
-
 
     </view>
   </view>
