--- a/Map/pages/userpage/homepage/homepage.wxss
+++ b/Map/pages/userpage/homepage/homepage.wxss
@@ -16,6 +16,13 @@
   text-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
+.UCenter-bg .add-friend{
+  position: absolute;
+  right: 30rpx;
+  top: 25rpx;
+  width: 175rpx;
+}
+
 .UCenter-bg text {
   opacity: 0.8;
 }
