--- a/Map/pages/publish/vote/vote.wxml
+++ b/Map/pages/publish/vote/vote.wxml
@@ -17,13 +17,13 @@
 	</view>	
 	<view class="cu-form-group">
 		<view class="grid col-4 grid-square flex-sub">
-			<view class="bg-img" wx:if="{{imgPath !== ''}}" bindtap="viewImage" data-url="{{imgPath}}">
-				<image src='{{imgPath}}' mode='aspectFill'></image>
+			<view class="bg-img" wx:if="{{local_imgPath !== ''}}" bindtap="viewImage" data-url="{{local_imgPath}}">
+				<image src='{{local_imgPath}}' mode='aspectFill'></image>
 				<view class="cu-tag bg-red" catchtap="deleteImg" data-index="{{index}}">
 					<text class="cuIcon-close"></text>
 				</view>
 			</view>
-			<view class="solids" bindtap="chooseImage" wx:if="{{imgPath === ''}}">
+			<view class="solids" bindtap="chooseImage" wx:if="{{local_imgPath === ''}}">
 				<text class="cuIcon-cameraadd"></text>
 			</view>
 		</view>
